--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.tomcat.max-threads=800
 server.tomcat.uri-encoding=UTF-8
 
 
-spring.datasource.url = jdbc:mysql://9.112.130.111:3306/myoil?useUnicode=true&amp;characterEncoding=UTF-8
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/myoil?useUnicode=true&amp;characterEncoding=UTF-8
 spring.datasource.username =root
 spring.datasource.password =root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -24,7 +24,8 @@ spring.jpa.show-sql = true
 ## Hibernate ddl auto (create, create-drop, update)
 #spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.redis.host=localhost
 spring.redis.port=6379
