--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.tomcat.max-threads=800
 server.tomcat.uri-encoding=UTF-8
 
 
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/myoil?useUnicode=true&amp;characterEncoding=UTF-8
+spring.datasource.url = jdbc:mysql://rm-wz94kf1k81q6nr08uoo.mysql.rds.aliyuncs.com:3306/myoil?useUnicode=true&amp;characterEncoding=UTF-8
 spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.password =Shuaiyang8
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 spring.datasource.max-active=100
